--- a/package.json
+++ b/package.json
@@ -1,1 +1,11 @@
-{ "name": "rhyscoinblackjack", "version": "1.0.0" }
+{
+  "name": "rhyscoin",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
+}
