--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "rhyscoin",
+  "name": "rhyscoinblackjack",
   "version": "1.0.0",
+  "description": "Rhys Coin Blackjack site",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.18.2"
   }
 }
